--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <!-- SLIDE 4: Vlog Creation -->
                         <div class="slide relative">
                             <a href="https://drive.google.com/drive/folders/1kmSIXn299uIfrHNzMv5VQ1synKWkIAw2" target="_blank">
-                                <img src="../kinley/Photos/_ (2).jpeg" alt="Vlog" class="w-full rounded-2xl object-cover aspect-[4/3]">
+                                <img src="https://raw.githubusercontent.com/kinleyyangchen/kinley.github.io/refs/heads/main/_%20(2).jpeg" alt="Vlog" class="w-full rounded-2xl object-cover aspect-[4/3]">
                                 <div class="absolute inset-0 bg-black/40 rounded-2xl flex items-end p-6 md:p-8">
                                     <h3 class="text-white text-4xl md:text-5xl font-extrabold tracking-wider text-shadow-lg font-['Roboto_Slab']">
                                         Vlog Creation
