--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <h2 class="text-3xl font-bold mb-4 text-center">About Me</h2>
             <div class="flex flex-col md:flex-row items-center gap-8 mt-6">
                 <div class="md:w-1/2">
-                    <img src="../kinley/Photos/IMG_2009.JPG" alt="Your New Image" class="rounded-lg shadow-md w-full h-auto">
+                    <img src="IMG_2009.JPG" alt="Your New Image" class="rounded-lg shadow-md w-full h-auto">
                 </div>
                 <div class="md:w-1/2 leading-relaxed text-center md:text-left">
                     <p class="mb-4">
