--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         /* Apply parallax effect to the main hero section */
         .hero-parallax {
-            background-image: url('../kinley/Photos/k.jpeg');
+            background-image: url('k.jpeg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
