--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="slides" id="gallery-slides">
                         <div class="slide relative">
                             <a href="https://drive.google.com/drive/folders/1y-AlLCH8EbWSOeaSwiozIOLIBO3WE3G3" target="_blank">
-                                <img src="../kinley/Photos/48,359 Checklist Stock Photos, High-Res Pictures, and Images - Getty Images.jpeg" alt="Reports" class="w-full rounded-2xl object-cover aspect-[4/3]">
+                                <img src="survey.jpeg" alt="Reports" class="w-full rounded-2xl object-cover aspect-[4/3]">
                                 <div class="absolute inset-0 bg-black/40 rounded-2xl flex items-end p-6 md:p-8">
                                     <h3 class="text-white text-4xl md:text-5xl font-extrabold tracking-wider text-shadow-lg font-['Roboto_Slab']">
                                         Reports
