--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         </div>
                         <div class="slide relative">
                             <a href="https://drive.google.com/drive/folders/1rLgMQl9ZY7KYMoCAEeH0pg5pqIb1MHgA" target="_blank">
-                                <img src="../kinley/Photos/a4587a73-d36f-459c-a902-e44411228ec7.jpeg" alt="Nature Retreat" class="w-full rounded-2xl object-cover aspect-[4/3]" onerror="this.onerror=null;this.src='https://placehold.co/600x450/8D6E63/ffffff?text=Nature+Retreat';">
+                                <img src="Camping Boot With Mountains Design Nature Sticker.jpeg" alt="Nature Retreat" class="w-full rounded-2xl object-cover aspect-[4/3]" onerror="this.onerror=null;this.src='https://placehold.co/600x450/8D6E63/ffffff?text=Nature+Retreat';">
                                 <div class="absolute inset-0 bg-black/40 rounded-2xl flex items-end p-6 md:p-8">
                                     <h3 class="text-white text-4xl md:text-5xl font-extrabold tracking-wider text-shadow-lg font-['Roboto_Slab']">
                                         Nature Retreat
