--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         </div>
                         <div class="slide relative">
                             <a href="https://docs.google.com/document/d/1PRhNpBoMGR-7GF5qMeA3PcbtLt_AoTyLID5JJ9mox-Q/edit?tab=t.0" target="_blank">
-                                <img src="../kinley/Photos/_.jpeg" alt="Morning Physical" class="w-full rounded-2xl object-cover aspect-[4/3]" onerror="this.onerror=null;this.src='https://placehold.co/600x450/5D4037/ffffff?text=Sports+Activity';">
+                                <img src="_ (10).jpeg" alt="Morning Physical" class="w-full rounded-2xl object-cover aspect-[4/3]" onerror="this.onerror=null;this.src='https://placehold.co/600x450/5D4037/ffffff?text=Sports+Activity';">
                                 <div class="absolute inset-0 bg-black/40 rounded-2xl flex items-end p-6 md:p-8">
                                     <h3 class="text-white text-4xl md:text-5xl font-extrabold tracking-wider text-shadow-lg font-['Roboto_Slab']">
                                         Sports
