--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <a href="#" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
-                            <img src="https://placehold.co/600x400/a1887f/ffffff?text=Read+Alouds" alt="Read Alouds Activity" class="rounded-lg shadow-md w-full h-auto">
+                            <img src="Editorial — Yasmeen Ismail.jpeg" alt="Read Alouds Activity" class="rounded-lg shadow-md w-full h-auto">
                         </div>
                         <div class="md:w-2/3">
                             <h3 class="text-xl font-bold accent-text mb-1">Read Alouds</h3>
