--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <a href="https://www.example.com/technology-internship-link" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row-reverse items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
-                            <img src="https://placehold.co/600x400/c8d6e5/2f3640?text=PCB+Internship" alt="Technology Internship" class="rounded-lg shadow-md w-full h-auto">
+                            <img src="Motherboard chip central processing unit, symbol, cpu digital high technology.jpeg" alt="Technology Internship" class="rounded-lg shadow-md w-full h-auto">
                         </div>
                         <div class="md:w-2/3">
                             <h3 class="text-xl font-bold accent-text mb-1">Internship Venture</h3>
