--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <a href="#" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
-                            <img src="https://placehold.co/600x400/424242/ffffff?text=Kibo+Robotics" alt="Kibo Robotics Competition" class="rounded-lg shadow-md w-full h-auto">
+                            <img src="TecnoTox.jpeg" alt="Kibo Robotics Competition" class="rounded-lg shadow-md w-full h-auto">
                         </div>
                         <div class="md:w-2/3">
                             <h3 class="text-xl font-bold accent-text mb-1">Kibo Robotics Competition</h3>
