--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <a href="https://www.example.com/earth-prize-link" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
-                            <img src="../kinley/Photos/Download premium png of Png continents of planet earth sticker by Noon about globe png, earth, global, earth planet, and africa 2456456.jpeg" alt="Earth Prize Activity" class="rounded-lg shadow-md w-full h-auto" onerror="this.onerror=null;this.src='https://placehold.co/600x400/81c784/333333?text=Earth+Prize';">
+                            <img src="_ (11).jpeg" alt="Earth Prize Activity" class="rounded-lg shadow-md w-full h-auto" onerror="this.onerror=null;this.src='https://placehold.co/600x400/81c784/333333?text=Earth+Prize';">
                         </div>
                         <div class="md:w-2/3">
                             <h3 class="text-xl font-bold accent-text mb-1">Earth Prize Challenge</h3>
