--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <a href="#" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row-reverse items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
-                            <img src="https://placehold.co/600x400/8d6e63/ffffff?text=Tactile+Map" alt="Tactile Map Creation Project" class="rounded-lg shadow-md w-full h-auto">
+                            <img src="_ (12).jpeg" alt="Tactile Map Creation Project" class="rounded-lg shadow-md w-full h-auto">
                         </div>
                         <div class="md:w-2/3">
                             <h3 class="text-xl font-bold accent-text mb-1">Tactile Map Workshop</h3>
