--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <a href="#" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row-reverse items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
-                            <img src="https://placehold.co/600x400/7986cb/ffffff?text=GLOF+System" alt="GLOF Detecting System Project" class="rounded-lg shadow-md w-full h-auto">
+                            <img src="Perito Moreno Glacier Sticker.jpeg" alt="GLOF Detecting System Project" class="rounded-lg shadow-md w-full h-auto">
                         </div>
                         <div class="md:w-2/3">
                             <h3 class="text-xl font-bold accent-text mb-1">GLOF Detecting System</h3>
