--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <a href="#" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row-reverse items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
-                            <img src="https://placehold.co/600x400/fbc02d/333333?text=Storytelling" alt="National Story Telling Competition" class="rounded-lg shadow-md w-full h-auto">
+                            <img src="Story telling is a key element within this book_.jpeg" alt="National Story Telling Competition" class="rounded-lg shadow-md w-full h-auto">
                         </div>
                         <div class="md:w-2/3">
                             <h3 class="text-xl font-bold accent-text mb-1">National Story Telling Competition</h3>
