--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <a href="#" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
-                            <img src="https://placehold.co/600x400/4db6ac/ffffff?text=Tide+Turner" alt="Tide Turner Plastic Challenge" class="rounded-lg shadow-md w-full h-auto">
+                            <img src="Plastic Bottle Recycling Process Vector Illustration Stock Vector - Illustration of clean, environment_ 93774310.jpeg" alt="Tide Turner Plastic Challenge" class="rounded-lg shadow-md w-full h-auto">
                         </div>
                         <div class="md:w-2/3">
                             <h3 class="text-xl font-bold accent-text mb-1">Tide Turner Plastic Challenge</h3>
