--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         </div>
                         <div class="slide relative">
                             <a href="https://drive.google.com/drive/folders/1kmSIXn299uIfrHNzMv5VQ1synKWkIAw2" target="_blank">
-                                <img src="_ (9).jpeg" alt="Vlog" class="w-full rounded-2xl object-cover aspect-[4/3]" onerror="this.onerror=null;this.src='https://placehold.co/600x450/546E7A/ffffff?text=Vlog+Creation';">
+                                <img src="ttttt.jpeg" alt="Vlog" class="w-full rounded-2xl object-cover aspect-[4/3]" onerror="this.onerror=null;this.src='https://placehold.co/600x450/546E7A/ffffff?text=Vlog+Creation';">
                                 <div class="absolute inset-0 bg-black/40 rounded-2xl flex items-end p-6 md:p-8">
                                     <h3 class="text-white text-4xl md:text-5xl font-extrabold tracking-wider text-shadow-lg font-['Roboto_Slab']">
                                         Vlog Creation
