--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 </a>
                 
                 <!-- 2. Tactile Map Workshop Card -->
-                <a href="#" target="_blank" class="block">
+                <a href="https://docs.google.com/document/d/1Ah_mEnns04T7TNy2VPOgeMZirSheD3VwNEdtn4phzLA/edit?tab=t.0" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row-reverse items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
                             <img src="Behind bars, Braille's dots fulfill prison inmates, aid the blind.jpeg" alt="Tactile Map Creation Project" class="rounded-lg shadow-md w-full h-auto">
@@ -229,7 +229,7 @@
                 </a>
 
                 <!-- 3. Tide Turner Plastic Challenge Card -->
-                <a href="#" target="_blank" class="block">
+                <a href="https://drive.google.com/drive/folders/1j0K3q5zOg7t4llaP9pcPFKLigd3zaGJK" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
                             <img src="Plastic Bottle Recycling Process Vector Illustration Stock Vector - Illustration of clean, environment_ 93774310.jpeg" alt="Tide Turner Plastic Challenge" class="rounded-lg shadow-md w-full h-auto">
@@ -244,7 +244,7 @@
                 </a>
 
                 <!-- 4. National Story Telling Competition Card -->
-                <a href="#" target="_blank" class="block">
+                <a href="https://drive.google.com/drive/folders/1gUPp9nIAayMHg6cpTtwuYkRWOuehRiG0" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row-reverse items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
                             <img src="Story telling is a key element within this book_.jpeg" alt="National Story Telling Competition" class="rounded-lg shadow-md w-full h-auto">
@@ -259,7 +259,7 @@
                 </a>
 
                 <!-- 5. Kibo Robotics Competition Card -->
-                <a href="#" target="_blank" class="block">
+                <a href="https://drive.google.com/drive/folders/1CtaAc1LLyWGf5cSc9ymPcgbMDdnpyfij" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
                             <img src="TecnoTox.jpeg" alt="Kibo Robotics Competition" class="rounded-lg shadow-md w-full h-auto">
@@ -267,14 +267,14 @@
                         <div class="md:w-2/3">
                             <h3 class="text-xl font-bold accent-text mb-1">Kibo Robotics Competition</h3>
                             <p class="text-gray-700 leading-snug text-sm">
-                                Designed, built, and programmed an autonomous robot using the Kibo platform to complete complex challenge courses, fostering skills in engineering and coding.
+                                Participated in a programming challenged held by JAXA and programmed an autonomous robot using the Kibo platform to complete complex challenge courses, that can be used and operated in the space. 
                             </p>
                         </div>
                     </div>
                 </a>
 
                 <!-- 6. GLOF Detecting System Card -->
-                <a href="#" target="_blank" class="block">
+                <a href="https://gitlab.com/tshering.cwangmo2020/golfdec/-/blob/main/documentation/projectidea/project.md" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row-reverse items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
                             <img src="Perito Moreno Glacier Sticker.jpeg" alt="GLOF Detecting System Project" class="rounded-lg shadow-md w-full h-auto">
@@ -289,7 +289,7 @@
                 </a>
 
                 <!-- 7. Read Alouds Card -->
-                <a href="#" target="_blank" class="block">
+                <a href="https://drive.google.com/drive/folders/1MlZvB7XBhgtzozL1idax2XrEz4FIbulW" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
                             <img src="Editorial — Yasmeen Ismail.jpeg" alt="Read Alouds Activity" class="rounded-lg shadow-md w-full h-auto">
@@ -297,7 +297,7 @@
                         <div class="md:w-2/3">
                             <h3 class="text-xl font-bold accent-text mb-1">Read Alouds</h3>
                             <p class="text-gray-700 leading-snug text-sm">
-                                Organized and led sessions reading aloud to junior students, promoting literacy, fostering a love for reading, and developing mentorship skills.
+                                Videos of the read alouds I did. 
                             </p>
                         </div>
                     </div>
