--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="max-w-3xl mx-auto space-y-6">
 
                 <!-- 1. Earth Prize Challenge Card -->
-                <a href="https://www.example.com/earth-prize-link" target="_blank" class="block">
+                <a href="https://drive.google.com/drive/folders/1v4OwU6Yx9qfPtH1lJ5dGqvAGHxibjRP7" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
                             <img src="Stop Polluters From Putting Their Money Where Your Mouth Is.jpeg" alt="Earth Prize Activity" class="rounded-lg shadow-md w-full h-auto" onerror="this.onerror=null;this.src='https://placehold.co/600x400/81c784/333333?text=Earth+Prize';">
