--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 </a>
 
                 <!-- 8. Internship Venture (PCB) Card -->
-                <a href="https://www.example.com/technology-internship-link" target="_blank" class="block">
+                <a href="https://drive.google.com/drive/folders/1RVRpiX8JvbtTfotk1G4Hzb3X2bLuGz18" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row-reverse items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
                             <img src="Motherboard chip central processing unit, symbol, cpu digital high technology.jpeg" alt="Technology Internship" class="rounded-lg shadow-md w-full h-auto">
