--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 </div>
                 <!-- Gallery Item 2 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="../Images/IMG_20240513_154814.jpg" alt="Photo of a school event" class="rounded-lg section-card w-full aspect-square object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/f5f5f5/555555?text=Nature+Retreat';">
+                    <img src="20230514_115741.jpg" alt="Photo of a school event" class="rounded-lg section-card w-full aspect-square object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/f5f5f5/555555?text=Nature+Retreat';">
                     <p class="mt-2 text-sm text-gray-600">
                         Nature retreat. 
                     </p>
