--- a/index.html
+++ b/index.html
@@ -327,16 +327,16 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Gallery Item 1 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="../Images/image_6209779.jpg" alt="Photo of friends" class="rounded-lg section-card w-full aspect-square object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/f5f5f5/555555?text=Tech+Project';">
+                    <img src="20230515_102712.jpg" alt="Photo of friends" class="rounded-lg section-card w-full aspect-square object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/f5f5f5/555555?text=Tech+Project';">
                     <p class="mt-2 text-sm text-gray-600">
-                        Technology project.
+                        Nature retreat, 2023
                     </p>
                 </div>
                 <!-- Gallery Item 2 -->
                 <div class="flex flex-col items-center text-center">
                     <img src="20230514_115741.jpg" alt="Photo of a school event" class="rounded-lg section-card w-full aspect-square object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/f5f5f5/555555?text=Nature+Retreat';">
                     <p class="mt-2 text-sm text-gray-600">
-                        Nature retreat. 
+                        Nature retreat, 2023 
                     </p>
                 </div>
                 <!-- Gallery Item 3 -->
