--- a/index.html
+++ b/index.html
@@ -341,9 +341,9 @@
                 </div>
                 <!-- Gallery Item 3 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="../Images/P1160253.JPG" alt="Photo of a classroom" class="rounded-lg section-card w-full aspect-square object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/f5f5f5/555555?text=National+Day';">
+                    <img src="IMG_3969.JPG" alt="Photo of a classroom" class="rounded-lg section-card w-full aspect-square object-cover" onerror="this.onerror=null;this.src='https://placehold.co/400x300/f5f5f5/555555?text=National+Day';">
                     <p class="mt-2 text-sm text-gray-600">
-                        2022, National Day. 
+                        Paro Tshechu, 2025 
                     </p>
                 </div>
                 <!-- Gallery Item 4 -->
