--- a/index.html
+++ b/index.html
@@ -348,9 +348,9 @@
                 </div>
                 <!-- Gallery Item 4 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="https://placehold.co/400x300/f5f5f5/555555?text=Graduation" alt="Photo of graduation day" class="rounded-lg section-card w-full aspect-square object-cover">
+                    <img src="Snapchat-286567772.jpg" alt="Photo of graduation day" class="rounded-lg section-card w-full aspect-square object-cover">
                     <p class="mt-2 text-sm text-gray-600">
-                        A memory from my graduation day with my classmates.
+                         PCB design
                     </p>
                 </div>
                 <!-- Gallery Item 5 -->
