--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
                 </div>
                 <!-- Gallery Item 5 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="https://placehold.co/400x300/f5f5f5/555555?text=Sports" alt="Photo of a sports game" class="rounded-lg section-card w-full aspect-square object-cover">
+                    <img src="image_6209779.JPG" alt="Photo of a sports game" class="rounded-lg section-card w-full aspect-square object-cover">
                     <p class="mt-2 text-sm text-gray-600">
-                        Playing football with my teammates after school.
+                        Technology sessions
                     </p>
                 </div>
                 <!-- Gallery Item 6 -->
