--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
                 </div>
                 <!-- Gallery Item 5 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="image_6209779.JPG" alt="Photo of a sports game" class="rounded-lg section-card w-full aspect-square object-cover">
+                    <img src="DSC00343.ARW" class="rounded-lg section-card w-full aspect-square object-cover">
                     <p class="mt-2 text-sm text-gray-600">
-                        Technology sessions
+                        Sessions on plastics with the monks 
                     </p>
                 </div>
                 <!-- Gallery Item 6 -->
