--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                 </div>
                 <!-- Gallery Item 6 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="https://placehold.co/400x300/f5f5f5/555555?text=Award" alt="Photo of an award ceremony" class="rounded-lg section-card w-full aspect-square object-cover">
+                    <img src="IMG_7816.HEIC" alt="Photo of an award ceremony" class="rounded-lg section-card w-full aspect-square object-cover">
                     <p class="mt-2 text-sm text-gray-600">
                         Receiving an award for my academic performance.
                     </p>
