--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
                 </div>
                 <!-- Gallery Item 6 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="IMG_7816.HEIC" alt="Photo of an award ceremony" class="rounded-lg section-card w-full aspect-square object-cover">
+                    <img src="image_6209779.JPG" alt="Photo of an award ceremony" class="rounded-lg section-card w-full aspect-square object-cover">
                     <p class="mt-2 text-sm text-gray-600">
-                        Receiving an award for my academic performance.
+                        Technology sessions
                     </p>
                 </div>
                 <!-- Gallery Item 7 -->
