--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@
                 </div>
                 <!-- Gallery Item 7 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="https://placehold.co/400x300/f5f5f5/555555?text=Concert" alt="Photo of a school concert" class="rounded-lg section-card w-full aspect-square object-cover">
+                    <img src="football.jpg" alt="Photo of a school concert" class="rounded-lg section-card w-full aspect-square object-cover">
                     <p class="mt-2 text-sm text-gray-600">
-                        Enjoying a lively school concert with my friends.
+                        National School Football Tournament, 2024
                     </p>
                 </div>
                 <!-- Gallery Item 8 -->
