--- a/index.html
+++ b/index.html
@@ -376,9 +376,9 @@
                 </div>
                 <!-- Gallery Item 8 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="https://placehold.co/400x300/f5f5f5/555555?text=Trip" alt="Photo from a school trip" class="rounded-lg section-card w-full aspect-square object-cover">
+                    <img src="540623226_122190704228319869_8790689476733130130_n.jpg" alt="Photo from a school trip" class="rounded-lg section-card w-full aspect-square object-cover">
                     <p class="mt-2 text-sm text-gray-600">
-                        A photo from a memorable school trip to a nearby village.
+                        Paro Dzongkhag Football Tournament, 2025
                     </p>
                 </div>
             </div>
