--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 </div>
                 <!-- Gallery Item 5 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="DSC00343.ARW" class="rounded-lg section-card w-full aspect-square object-cover">
+                    <img src="IMG_7157.jpg" class="rounded-lg section-card w-full aspect-square object-cover">
                     <p class="mt-2 text-sm text-gray-600">
                         Sessions on plastics with the monks 
                     </p>
