--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
                 </div> 
                 <!-- Gallery Item 9 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="540623226_122190704228319869_8790689476733130130_n.jpg" alt="Photo from a school trip" class="rounded-lg section-card w-full aspect-square object-cover">
+                    <img src="hhjni.jpg" alt="Photo from a school trip" class="rounded-lg section-card w-full aspect-square object-cover">
                     <p class="mt-2 text-sm text-gray-600">
-                        Paro Dzongkhag Football Tournament, 2025
+                        BOB National Women's League, 2024
                     </p>
                 </div> 
                 <!-- Gallery Item 10 -->
