--- a/index.html
+++ b/index.html
@@ -401,6 +401,20 @@
                     <p class="mt-2 text-sm text-gray-600">
                         Washing plastic bottles to make a usable dustbin for Tide Turner Plastic Challenge
                     </p> 
+                 </div> 
+                <!-- Gallery Item 11 -->
+                <div class="flex flex-col items-center text-center">
+                    <img src="DSC00091.JPG" alt="Photo from a school trip" class="rounded-lg section-card w-full aspect-square object-cover">
+                    <p class="mt-2 text-sm text-gray-600">
+                        Washing plastic bottles to make a usable dustbin for Tide Turner Plastic Challenge
+                    </p> 
+                 </div> 
+                <!-- Gallery Item 12 -->
+                <div class="flex flex-col items-center text-center">
+                    <img src="DSC00091.JPG" alt="Photo from a school trip" class="rounded-lg section-card w-full aspect-square object-cover">
+                    <p class="mt-2 text-sm text-gray-600">
+                        Washing plastic bottles to make a usable dustbin for Tide Turner Plastic Challenge
+                    </p> 
             </div>
         </section>
 
