--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
                  </div> 
                 <!-- Gallery Item 11 -->
                 <div class="flex flex-col items-center text-center">
-                    <img src="DSC00091.JPG" alt="Photo from a school trip" class="rounded-lg section-card w-full aspect-square object-cover">
+                    <img src="Copy of IMG_20240526_113038.jpg" alt="Photo from a school trip" class="rounded-lg section-card w-full aspect-square object-cover">
                     <p class="mt-2 text-sm text-gray-600">
-                        Washing plastic bottles to make a usable dustbin for Tide Turner Plastic Challenge
+                        Cleaning Campeign
                     </p> 
                  </div> 
                 <!-- Gallery Item 12 -->
