--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                             <img src="Motherboard chip central processing unit, symbol, cpu digital high technology.jpeg" alt="Technology Internship" class="rounded-lg shadow-md w-full h-auto">
                         </div>
                         <div class="md:w-2/3">
-                            <h3 class="text-xl font-bold accent-text mb-1">Internship Venture</h3>
+                            <h3 class="text-xl font-bold accent-text mb-1">Internship</h3>
                             <p class="text-gray-700 leading-snug text-sm">
                                 Completed a one-week internship at the DGI Aesthetic Center focused on PCB (Printed Circuit Board) fabrication and electronics assembly.
                             </p>
