--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <a href="https://68469b83efdef.site123.me/" target="_blank" class="block">
                     <div class="flex flex-col md:flex-row-reverse items-center gap-4 section-card p-3 rounded-xl shadow-lg">
                         <div class="md:w-1/3">
-                            <img src="Motherboard chip central processing unit, symbol, cpu digital high technology.jpeg" alt="Technology Internship" class="rounded-lg shadow-md w-full h-auto">
+                            <img src="Kitchen Inspo.jpeg" alt="Technology Internship" class="rounded-lg shadow-md w-full h-auto">
                         </div>
                         <div class="md:w-2/3">
                             <h3 class="text-xl font-bold accent-text mb-1">Cooking venture</h3>
